<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/editTextTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/item_title" />

        <EditText
            android:id="@+id/editTextDateDue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:ems="10"
            android:inputType="date"
            android:text="@string/item_due_date"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/editTextDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:ems="10"
            android:gravity="top"
            android:inputType="textPersonName"
            android:text="@string/item_description"
            android:textAlignment="textStart"
            android:textSize="12sp" />

        <ImageView
            android:id="@+id/imageViewDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:contentDescription="@string/item_descriptive_image"
            app:srcCompat="@mipmap/ic_launcher" />

        <Button
            android:id="@+id/buttonAddTask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:onClick="agregarTarea"
            android:text="@string/item_new" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>